[package]
name = "tor-v3-vanity"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

[[bin]]
name = "t3v"
test = false
bench = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accel = "0.3.1"
clap = "2.33.1"
crossbeam-channel = "0.4.3"
data-encoding = "2.2.1"
durationfmt = "0.1.1"
ed25519-compact = "0.1.6"
num_cpus = "1.13.0"
rand = "0.7.3"
sha3 = "0.9.1"
zkp-u256 = "0.1.1"