[package]
name = "tor-v3-vanity"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "A TOR v3 vanity url generator designed to run on an nvidia GPU."
license = "MIT"
repository = "https://github.com/dr-bonez/tor-v3-vanity"
documentation = "http://docs.rs/tor-v3-vanity"
readme = "README.md"
keywords = ["tor", "v3", "vanity", "gpu", "cuda"]
include = ["src/**/*", "Cargo.toml", "core/**/*"]

[[bin]]
name = "t3v"
test = false
bench = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
chrono = "0.4.13"
clap = "2.33.1"
crossbeam-channel = "0.4.3"
ed25519-dalek = "1.0.0-pre.4"
failure = "0.1.8"
num_cpus = "1.13.0"
rand = "0.7.3"
rustacuda = "0.1.2"
sha3 = "0.9.1"
tor-v3-vanity-core = "0.1.0"

[build-dependencies]
ptx-builder = "0.5"
